<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_one">l</string>
    <string name="btn_two">8</string>
    <string name="btn_three">9</string>
    <string name="btn_four">/</string>
    <string name="btn_five">4</string>
    <string name="btn_six">5</string>
    <string name="btn_seven">6</string>
    <string name="btn_eight">*</string>
    <string name="btn_nine">3</string>
    <string name="btn_ten">2</string>
    <string name="btn_eleven">1</string>
    <string name="btn_tweoelve">-</string>
    <string name="btn_thirten">C</string>
    <string name="btn_fourteen">0</string>
    <string name="btn_fiften">+</string>
    <string name="btn_sixten">=</string>
    <string name="btn_seventen">.</string>
  
    

</resources>
